--- a/src/Pages/Home/styles.css
+++ b/src/Pages/Home/styles.css
@@ -6,6 +6,8 @@
     width: 35vw;
     height: 100vh;
     margin: auto;
+    padding: 15px;
+    gap: 15px;
 }
 
 .informations {
@@ -15,23 +17,23 @@
     justify-items: center;
 }
 
-.informations p{
-    margin-top: 0px;
-    margin-bottom: 30px;
-}
-
 .Home button {
     display: flex;
     justify-content: center;
     align-items: center;
-    background-color: black;
+    background-color: rgb(22, 22, 22);
     color: white;
     outline: none;
     border: none;
-    padding: 10px;
     width: 100%;
+    height: 40px;
+    font-weight: bold;
+    font-size: 1.1rem;
+    gap: 5px;
 }
 
 .Home button:hover {
     cursor: pointer;
+    transition: 0.3s ease;
+    transform: scale(1.05);
 }
