--- a/src/components/BoxMensage/styles.css
+++ b/src/components/BoxMensage/styles.css
@@ -1,28 +1,42 @@
+@import url('https://fonts.googleapis.com/css2?family=Satisfy&display=swap');
+
 section {
     display: flex;
     flex-direction: column;
-    margin-top: 10px;
+    justify-content: center;
     width: 100%;
-    height: 150px;
-    background-color: rgb(187, 187, 187);
+    height: 200px;
+    background-color: rgba(0, 0, 0, 0.171);
+    box-shadow: 1px 1px 3px rgba(0, 0, 0, 0.26);
+    backdrop-filter: blur(5px);
+    font-family: 'Satisfy', cursive;
+    font-size: 1.5rem
 }
 
 .fav-icon {
     display: flex;
     justify-content: flex-end;
-    padding: 10px;
-    padding-bottom: 0px;
+    align-items: center;
     color: white;
 }
 
 .fav-icon .icon{
+    width: 20px;
+    height: 20px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
     padding: 5px;
 }
 
 .fav-icon .icon:hover{
     transition: 0.3s ease;
     cursor: pointer;
-    background-color: rgb(54, 54, 54);
+    transform: scale(1.50);
+    background-color: white;
+    color: black;
+    border-radius: 50px;
+    box-shadow: 1px 1px 3px rgba(0, 0, 0, 0.288);
 }
 
 .msg {
@@ -31,6 +45,7 @@ section {
     align-items: center;
     width: 100%;
     height: 100%;
-    padding: 10px 10px;
-    padding-top: 0px ;
+    color: white;
+    text-shadow: 0px 0px 3px rgba(0, 0, 0, 0.795);
+    padding: 5px;
 }
