--- a/src/components/Header/styles.css
+++ b/src/components/Header/styles.css
@@ -33,7 +33,7 @@ header{
     left: 0;
     height: 100%;
     width: 100%;
-    background-color: black;
+    background-color: rgb(22,22,22);
 }
 
 .header-container nav{
@@ -60,7 +60,7 @@ header{
 .btn-sidebar{
     width: 50px;
     height: 50px;
-    background: rgb(0, 0, 0);
+    background: rgb(22,22,22);
     color: white;
     display: flex;
     align-items: center;
@@ -78,6 +78,7 @@ header{
     display: flex;
     align-items: center;
     gap: 10px;
+    font-size: 1rem;
 }
 
 
