--- a/src/index.css
+++ b/src/index.css
@@ -1,9 +1,16 @@
+*{
+  padding: 0;
+  margin: 0;
+}
 body {
+  background-image: url('../public/img/background.jpg');
+  background-position: center;
+  background-attachment: fixed;
+  background-size: 1500px;
   width: 100vw;
   height: 100vh;
   display: flex;
   flex-direction: column;
-  margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
