--- a/src/components/LoadComponent/styles.css
+++ b/src/components/LoadComponent/styles.css
@@ -1,19 +1,44 @@
 
 @keyframes load {
-    to{
-        transform: rotate(360deg);
+
+  
+    20%{
+        border-right: 5px  dashed rgb(255, 255, 255);
     }
+
+    40%{
+        border-bottom: 5px  dashed rgb(255, 255, 255);
+    }
+
+    60%{
+        border-left: 5px  dashed rgb(255, 255, 255);
+    }
+
+    80%{
+        border-top: 5px  dashed rgb(255, 255, 255);
+    }
+
+    100%{
+        border-top: 5px  dashed rgb(255, 255, 255);
+    }
+}
+
+.load-container{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height: 200px;
+    font-size: 1.5rem
 }
 .load{
     width: 30px;
     height: 30px;
-    border: 3px solid black;
+    border: 5px dashed black;
     border-radius: 50px;
-    border-top: 3px solid blue;
     animation-name: load;
     animation-duration: 1s;
-    animation-timing-function: linear ;
+    animation-timing-function: linear;
     animation-iteration-count: infinite;
-    animation-fill-mode: forwards;
 }
 
