--- a/src/Pages/DataManager/styles.css
+++ b/src/Pages/DataManager/styles.css
@@ -25,11 +25,16 @@ input{
 }
 
 .container-msg {
-    width: 100%;
+    display: flex;
+    flex-direction: column;
+    width:40vw;
     height: 50%;
     background-color: rgba(0, 0, 0, 0.171);
     box-shadow: 1px 1px 3px rgba(0, 0, 0, 0.26);
     backdrop-filter: blur(5px);
+    gap: 10px;
+    padding: 10px;
+    overflow-y: scroll;
 }
 
 .titles{
