--- a/src/components/AlertMsg/styles.css
+++ b/src/components/AlertMsg/styles.css
@@ -1,9 +1,14 @@
 .alert{
+    opacity: 0;
     position: fixed;
-    top: 3;
+    top: 0;
     display: flex;
-    flex-direction: column;
+    gap: 10px;
     align-items: center;
     justify-content: space-around;
     background-color: white;
+    padding: 20px;
+    border-radius: 10px;
+    margin-top: 30px;
+    transition: 0.3s ease;
 }
