--- a/src/components/BoxMensage/styles.css
+++ b/src/components/BoxMensage/styles.css
@@ -10,7 +10,7 @@ section {
     box-shadow: 1px 1px 3px rgba(0, 0, 0, 0.26);
     backdrop-filter: blur(5px);
     font-family: 'Satisfy', cursive;
-    font-size: 1.5rem
+    font-size: 1.5rem;
 }
 
 .fav-icon {
