--- a/src/Pages/Home/styles.css
+++ b/src/Pages/Home/styles.css
@@ -6,7 +6,6 @@
     width: 35vw;
     height: 100vh;
     margin: auto;
-    padding: 15px;
     gap: 15px;
 }
 
@@ -15,6 +14,8 @@
     flex-direction: column;
     align-items: center;
     justify-items: center;
+    text-align: center;
+    gap: 1rem;
 }
 
 .Home button {
@@ -26,10 +27,10 @@
     outline: none;
     border: none;
     width: 100%;
-    height: 40px;
+    height: 3rem;
     font-weight: bold;
     font-size: 1.1rem;
-    gap: 5px;
+    gap: 1rem;
 }
 
 .Home button:hover {
@@ -39,4 +40,10 @@
 
 .Home button:disabled{
     background-color: rgb(209, 209, 209);
+}
+
+@media screen and (max-width: 1000px){
+    .Home{
+        width: 90vw;
+    }
 }
