--- a/src/components/Header/styles.css
+++ b/src/components/Header/styles.css
@@ -17,12 +17,14 @@
 header{
     display: flex;
     position: fixed;
-    height: 100%;
+    height: 100vh;
+    left: 0;
     animation-name: close;
     animation-duration: 0.3s;
     animation-fill-mode: forwards;
     transform: translate(-196px);
     animation-timing-function: ease ease-in-out;
+    z-index: 200;
 }
 
 .header-container{
@@ -34,6 +36,7 @@ header{
     height: 100%;
     width: 100%;
     background-color: rgb(22,22,22);
+    box-shadow: 0px 0px 4px rgba(36, 31, 37, 0.27);
 }
 
 .header-container nav{
