--- a/src/index.css
+++ b/src/index.css
@@ -2,15 +2,15 @@
   padding: 0;
   margin: 0;
 }
+
+#root{
+  overflow-x: hidden;
+}
 body {
   background-image: url('../public/img/background.jpg');
   background-position: center;
-  background-attachment: fixed;
-  background-size: 1500px;
-  width: 100vw;
-  height: 100vh;
-  display: flex;
-  flex-direction: column;
+  background-repeat: no-repeat;
+  background-size: cover;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
